# substrait-textplan

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  build.rs  plan04_cpp_reference.splan  plan11_cpp_reference.splan  plan20_cpp_reference.splan  set_comparison_cpp_reference.splan
.github/: dependabot.yml
.github/workflows/: build_test.yml  cpp_build_test.yml  go_build_test.yml  python_release.yml  security.yml
build-tools/: README.md  visitor_generator.rs
cpp/: CMakeLists.txt  README.md
cpp/examples/: CMakeLists.txt  roundtrip_example.cpp  simple_example.cpp
cpp/include/: substrait_textplan.h
cpp/src/: substrait_textplan.cpp
cpp/tests/: CMakeLists.txt  test_textplan.cpp
go/: README.md  go.mod  install.sh
go/examples/: simple.go
go/substrait/: build.go  textplan.go  textplan_test.go
grammar/: SubstraitPlanLexer.g4
python/: .gitignore  MANIFEST.in  README.md  example.py  pyproject.toml  setup.py  substrait_textplan.py  test_textplan.py
python/substrait_textplan/: __init__.py  _lib.py
python/substrait_textplan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/tests/: __init__.py  test_textplan.py
src/: lib.rs  proto.rs
src/substrait/textplan/parser/grammar/: SubstraitPlanLexer.g4  SubstraitPlanParser.g4
src/textplan/: mod.rs  symbol_table.rs
src/textplan/common/: error.rs  location.rs  mod.rs  parse_result.rs  proto_location.rs  string_utils.rs  structured_symbol_data.rs  text_location.rs  unknown_location.rs
src/textplan/converter/: README.md  initial_plan_visitor.rs  load_binary.rs  load_json.rs  mod.rs  pipeline_visitor.rs  save_binary.rs  save_json.rs  save_text.rs  visitor.rs  visitor_generator.rs
src/textplan/parser/: antlr_visitor.rs  antlr_visitor.rs.bak  error_listener.rs  grammar.rs  load_text.rs  mod.rs  parse_text.rs  plan_visitor.rs  tree_sitter_visitor.rs
src/textplan/parser/antlr/: README.md  mod.rs  substraitplanlexer.rs  substraitplanparser.rs  substraitplanparserlistener.rs  substraitplanparservisitor.rs
src/textplan/parser/antlr/src/substrait/textplan/parser/grammar/: substraitplanlexer.rs  substraitplanparser.rs  substraitplanparserlistener.rs
src/textplan/parser/visitors/: base.rs  main_visitor.rs  mod.rs  pipeline_visitor.rs  relation_visitor.rs  subquery_visitor.rs  type_visitor.rs
src/textplan/printer/: expression_printer.rs  mod.rs  plan_printer.rs
src/textplan/tests/: base_plan_visitor_test.rs  converter_test.rs  mod.rs  parser_test.rs  proto_matchers.rs  roundtrip_test.rs
tree-sitter-substrait/: Cargo.toml  grammar.js
tree-sitter-substrait/bindings/rust/: build.rs  lib.rs
tree-sitter-substrait/queries/: highlights.scm  locals.scm
tree-sitter-substrait/src/: grammar.json  node-types.json  parser.c
visitor_generator_standalone/: Cargo.toml
visitor_generator_standalone/src/: main.rs
