[package]
name = "substrait-textplan"
version = "0.1.0"
edition = "2021"
authors = ["David Sisson"]
description = "Substrait textplan parser library in Rust"
license = "Apache-2.0"

[dependencies]
prost = "0.13.5"
bytes = "1.5.0"
thiserror = "2.0.12"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_bytes = "0.11"
antlr-rust = "0.3.0-beta"

[dependencies.bit-set]
version = "0.8.0"

[workspace]
resolver = "2"

[workspace.dependencies]
bit-set = "0.8.0"

[build-dependencies]
prost-build = "0.13.5"

[dev-dependencies]

[lib]
name = "substrait_textplan"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = []