[package]
name = "substrait-textplan"
version = "0.1.0"
edition = "2021"
authors = ["David Sisson"]
description = "Substrait textplan parser library in Rust"
license = "Apache-2.0"

[dependencies]
substrait = { version = "0.55.1", features = ["serde"] }
prost = { version = "0.13.5", features = ["derive", "prost-derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
log = "0.4.20"
antlr-rust = "0.3.0-beta"
prost-types = "0.13.5"
prost-build = "0.13.5"
walkdir = "2.5.0"

[dependencies.bit-set]
version = "0.5.3"

[build-dependencies]
prost = { version = "0.13.5", features = ["derive", "prost-derive"] }
prost-build = "0.13.5"
prost-types = "0.13.5"
walkdir = "2.5.0"
phf = { version = "0.11", features = ["macros"] }
tinytemplate = "1.2.1"
serde = { version = "1.0.219", features = ["derive"] }

[workspace]
resolver = "2"

[workspace.dependencies]
bit-set = "0.5.3"

[dev-dependencies]

[lib]
name = "substrait_textplan"
crate-type = ["cdylib", "rlib"]

[features]
# TODO -- Consider adding features for the other language implementations.
default = []
python = []
