[build-system]
requires = ["setuptools>=65", "setuptools-rust>=1.5.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "substrait-textplan"
version = "0.1.0"
description = "Python wrapper for the Substrait TextPlan library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "David Sisson", email = "EpsilonPrime@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/EpsilonPrime/substrait-textplan"
"Bug Reports" = "https://github.com/EpsilonPrime/substrait-textplan/issues"
Source = "https://github.com/EpsilonPrime/substrait-textplan"

[tool.setuptools]
py-modules = ["substrait_textplan"]
