[package]
name = "tree-sitter-substrait"
description = "Substrait TextPlan grammar for the tree-sitter parsing library"
version = "0.1.0"
edition = "2021"
authors = ["Dave Simmons"]
license = "Apache-2.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/**/*",
  "Cargo.toml",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"