[package]
name = "visitor_generator_standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { version = "0.13.5", features = ["derive", "prost-derive"] }
prost-build = "0.13.5"
prost-types = "0.13.5"
walkdir = "2.5.0"
bytes = "1.10.1"
phf = { version = "0.11", features = ["macros"] }
tinytemplate = "1.2.1"
serde = { version = "1.0.219", features = ["derive"] }

[workspace]